Add concept of "state of account" to Identity Service and example usage

Clients of signin code have a common use case of getting an AccountInfo
(e.g., for the primary account) followed by getting information about
the state of that account (e.g., whether it has a refresh token
available). This CL facilitates porting this use case to the Identity
Service by:

- Adding an AccountState Mojo interface. AccountState represents the
  current state of the account (as opposed to AccountInfo, which
  represents long-lived information about the account such as the
  Account ID).
- Having the methods that return an AccountInfo return an AccountState
  as well.

This CL also ports the implementation of the
chrome.identity.getAuthToken() function to use the new functionality
instead of directly calling
OAuth2TokenService::RefreshTokenIsAvailable() after receiving the
account ID.

Bug: 729554, 729556
Change-Id: I9a1c3ecb6d9be491850e7ab99388515a34705eef