services/identity/identity_manager.h
@@ -8,6 +8,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "components/signin/core/browser/account_info.h"
 #include "components/signin/core/browser/profile_oauth2_token_service.h"
+#include "services/identity/public/cpp/account_state.h"
 #include "services/identity/public/cpp/scope_set.h"
 #include "services/identity/public/interfaces/identity_manager.mojom.h"
 
@@ -75,6 +76,9 @@ class IdentityManager : public mojom::IdentityManager {
 
   // Deletes |request|.
   void AccessTokenRequestCompleted(AccessTokenRequest* request);
+
+  // Gets the current state of the account represented by |account_info|.
+  AccountState GetStateOfAccount(const AccountInfo& account_info);
 
   AccountTrackerService* account_tracker_;
   SigninManagerBase* signin_manager_;
